@@ -20,9 +20,9 @@
 			* reparse tips on relevant config change?
 			* autopay disallow default amount is broken
 			* autopay on 3rd tx in a row doublespends
-			* mark read takes forever and locks the gui
-
-
+			* mark read takes forever and locks the gui: use reddit thread like for refresh!
+			* settings: only refresh on relevant changes
+			
 	* beta3
 
 			* column with <subreddit> of tip
